fix: Broken CSS for audio wave forms (WEBAPP-6896)

--- a/src/style/components/asset/controls/audio-seek-bar.less
+++ b/src/style/components/asset/controls/audio-seek-bar.less
@@ -21,7 +21,7 @@ audio-seek-bar {
   position: relative;
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 0;
   cursor: pointer;
 
   span {
